--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<div class="inner">
 							<h2>Protofolio</h2>
 							<ul class="links">
-								<li><a href="https://www.linkedin.com/in/futoon"></a></li>
-								<li><a href="https://github.com/fut11"></a></li>
+								<li><a href="https://www.linkedin.com/in/futoon">LinkedIn</a></li>
+								<li><a href="https://github.com/fut11"></a>GitHub</li>
 
 							</ul>
 							<a href="#" class="close">Close</a>
