--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<h2>Protofolio</h2>
 							<ul class="links">
 								<li><a href="https://www.linkedin.com/in/futoon">LinkedIn</a></li>
-								<li><a href="https://github.com/fut11"></a>GitHub</li>
+								<li><a href="https://github.com/fut11">GitHub</a></li>
 
 							</ul>
 							<a href="#" class="close">Close</a>
