--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
+				<!-- Header -->
 
+
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<h2>Protofolio</h2>
+							<ul class="links">
+								<li><a href="https://www.linkedin.com/in/futoon">LinkedIn</a></li>
+								<li><a href="https://github.com/fut11">GitHub</a></li>
+
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
 
 				<!-- Banner -->
 					<section id="banner">
