--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										</article>
 										<article>
 											<a class="image"><img src="images/flower.png" alt="" /></a>
-											<h3 class="major">ٍSaffron Flower</h3>
+											<h3 class="major">Saffron Flower</h3>
 											<p>I designed a saffron flower with separate saffron threads for the player to interact with in the above mentioned project "Saffron Farm".</p>
 											<a href="https://futoon.my.canva.site/" class="special">Show more</a>
 										</article>
@@ -157,8 +157,7 @@
 								<li class="icon brands alt fa-github">
 									<a href="https://github.com/fut11">GitHup</a><br /></li>
 							</ul>
-							<ul class="copyright">
-							</ul>
+
 						</div>
 					</section>
 
